Comparison existing literature

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -48,7 +48,7 @@ follows. Section 1 introduces . . . ”.}
 \subsection{Objectives}
 The objective of this paper is to investigate whether two extensions of Contract Net (CNET) \cite{CNETStandard,CNET}, namely Contract Net with Confirmation Protocol (CNCP) \cite{CNCP} and Dynamic Contract Net (DynCNET) \cite{DynCNET} are an improvement on CNET itself.
 
-We do this in a drone delivery setting where a company owns a fleet of drones that receives orders from clients, collects the ordered package at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries, which can be charged at a warehouse. Drones cannot collide with each other.
+We do this in a drone delivery setting where a company owns a fleet of drones (or UAVs, unmanned aerial vehicles) that receives orders from clients, collects the ordered package at one of several warehouses and delivers them to that client. The drones autonomously receive, process and deliver the client orders. The goal is to maximize the company's profit, by having the most suitable drone serve each order. Clients have a time limit for their deliveries, after which the company needs to pay a fine.  Drones can break down and are constrained by their batteries, which can be charged at a warehouse. Drones cannot collide with each other.
 
 We investigate whether any of the aforementioned protocols are suited for a drone company to be profitable in the described setting. We will also check the influence of the number of drones, clients and warehouses on the profit the company can make.
 \subsection{Hypotheses}
@@ -82,7 +82,7 @@ We expect the profit to rise until there are too many clients, after which the f
 
 In this section we describe the theory of the Contract Net Protocol and the two extensions CNCP and DynCNET. We use the literature on these protocols to highlight their characteristics and differences.
 
-\subsection{Contract Net} The Contract Net Protocol, or CNET, was conceived by Smith in 1980. \cite{CNET} It is a high-level protocol for communication between agents to allow distributed task execution. The high-level protocol messages have a particular structure and meaning, which means the agents can interpret them to receive information on tasks and allocations and to send replies such as bids. 
+\subsection{Contract Net} The Contract Net Protocol, or CNET, was conceived by Smith in 1980 \cite{CNET}. It is a high-level protocol for communication between agents to allow distributed task execution. The high-level protocol messages have a particular structure and meaning, which means the agents can interpret them to receive information on tasks and allocations and to send replies such as bids. 
 
 CNET tries to solve the problem of assigning tasks to idle agents in the most efficient way. Moreover, this problem needs to be solved in a distributed manner, without a central authority that tracks tasks and assigns them with global knowledge.
 
@@ -103,7 +103,7 @@ The bidding process can be extended to allow agents that cannot or do not want t
 The FIPA version of the Contract Net Protocol \cite{CNETStandard} differs from the original protocol by adding acceptance and rejection of a bid by a manager. This means a contractor is notified if its bid was rejected.
 
 \subsection{Contract Net with Confirmation} 
-The Contract Net with Confirmation Protocol, or CNCP, was conceived as an extension to the Contract Net Protocol by Knabe et al. in 2002. \cite{CNCP}
+The Contract Net with Confirmation Protocol, or CNCP, was conceived as an extension to the Contract Net Protocol by Knabe et al. in 2002 \cite{CNCP}.
 
 The major shortcoming of CNET that CNCP tries to address is the early commitment by agents. If multiple managers announce a task at the same time, a contractor is only allowed to bid on one of these tasks, after which it already allocates some resources to that task. The agent will choose the task that seems most interesting at that time. The problem is that if a task is somehow very popular, many agents would bid on it but only one would be awarded the task. The other agents then have to wait for the next opportunity to restart the bidding process and try to receive a task. Furthermore the agent has allocated some resources to that popular task, which possibly are only freed after the task announcement expires. This means the agent has less available resources to bid on other tasks later on.
 
@@ -112,7 +112,7 @@ To resolve this issue, in the CNCP the full commitment to a task is moved to the
 CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacter bidder refuses, the next best bidder has to be tried and two messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
 
 \subsection{Dynamic Contract Net}
-The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al in 2007. \cite{DynCNET}
+The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al in 2007 \cite{DynCNET}. 
 
 DynCNET tries to improve on CNET by adding dynamism to the allocation and execution of tasks. More specifically, it addresses the fact that an agent usually has to do some preparation when it is assigned a task before it can actually start executing this task. DynCNET allows contracts to be switched during this preparation phase.
 
@@ -127,13 +127,13 @@ The synchronization between managers and contractor to assess their current stat
 
 \taskS{Nu altijd geschreven als client-drone, aanpassen naar initiator-participant, om te matchen met theorie sectie + eventueel eens kijken dat zelfde termen gebruikt worden}
 
-In the literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a 2-phase protocol (PreBidding and DefinitiveBidding). The first round of pre-bidding is only tentative. The client informs the drones of the tentative results. Drones can still change their offers based on this tentative results and how the world (and other bidding processes) evolve. Once a drone has been tentatively accepted, it can send a definitive bid to the client. If this bid is still better than all tentative bids from other drones, the drone will be informed and both agents commit to the contract. All other drones will be informed that the bidding is definitely over. If the definitive bid is not the best bid, the drone gets tentatively or definitely declined. In case of the former, it can submit a new tentative bid. This protocol can be seen as an extension on CNCP. Drones who get accepted, can accept or decline by choosing the appropriate definitive bid. The advantage of this protocol is that drones who get rejected can still improve their bid.
+In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a 2-phase protocol (PreBidding and DefinitiveBidding). The first round of pre-bidding is only tentative. The client informs the drones of the tentative results. Drones can still change their offers based on this tentative results and how the world (and other bidding processes) evolve. Once a drone has been tentatively accepted, it can send a definitive bid to the client. If this bid is still better than all tentative bids from other drones, the drone will be informed and both agents commit to the contract. All other drones will be informed that the bidding is definitely over. If the definitive bid is not the best bid, the drone gets tentatively or definitely declined. In case of the former, it can submit a new tentative bid. This protocol can be seen as an extension on CNCP. Drones who get accepted, can accept or decline by choosing the appropriate definitive bid. The advantage of this protocol is that drones who get rejected can still improve their bid.
 
 \cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When a client receives bids, it can choose to accept one, or choose to iterate the process by issuing an adapted the call for proposal to a subset of the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a drone is awarded the contract, the client stops issuing calls for proposals (because all bids are unsatisfactory) or all drones stop bidding.
 
 The tentative bidding of \cite{TentativeBidding} and ICN are very similar. Both protocols can be mapped onto each other.\commentY{Dat erin laten van het mappen op elkaar? Ik denk dat dat het geval is, als ik diagrammen vergelijk, maar niet 100\% zeker} One of the main differences is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  In our setting however, both protocols do not make much sense. Drones bid using the estimated profit. They cannot increase their bid, unless the estimated profit changes.
 
-\cite{LeveledCommitment} uses game theory to proof that leveled commitment is to be preferred in all situations over full commitment. In the negotiation of a contract, a decommitting penalty is agreed upon. (This penalty might be different for both agents). When an agent wants to cancel the contract, he has to pay his decommitting fee to the other agent. This not only gives a way to calculate whether or not to cancel a contract in favor of another contract\footnote{They prove (again using game theory) that it is harder than just checking if the profit of the new contract is higher than the fee, because the other agent might decommit if this agent doesn't decommit.}. It also allows contracts that were not possible using full commitment: it is possible that the benefit from a contract is lower than the expected benefit from other contracts that have not yet been announced. But by having the right decommitting fees, a leveled commitment contract might still be interesting for both parties.
+\cite{LeveledCommitment} uses game theory to prove that leveled commitment is to be preferred in all situations over full commitment. In the negotiation of a contract, a decommitting penalty is agreed upon. (This penalty might be different for both agents). When an agent wants to cancel the contract, he has to pay his decommitting fee to the other agent. This not only gives a way to calculate whether or not to cancel a contract in favor of another contract\footnote{They prove (again using game theory) that it is harder than just checking if the profit of the new contract is higher than the fee, because the other agent might decommit if this agent doesn't decommit.}. It also allows contracts that were not possible using full commitment: it is possible that the benefit from a contract is lower than the expected benefit from other contracts that have not yet been announced. But by having the right decommitting fees, a leveled commitment contract might still be interesting for both parties.
 
 It is important to note, that in our design, bids are satisfactory if the expected profit is above the fine for not delivering to this client. (It does not take into account that new clients or drones might become available). The agents described in \cite{LeveledCommitment} take the expected profit of new clients or busy drones into account.
 
@@ -167,16 +167,16 @@ The failures of drones are based on a Poisson distribution and are used in calcu
 
 \commentV{Agent architecture: zie section 2.3 https://lirias.kuleuven.be/bitstream/123456789/156687/1/CW478.pdf\commentY{Dat is toch veel complexer dan hoe onze architectuur eruit ziet?}}
 \subsubsection{Agent state machines}
-Both the drone and client use finite state machines to define in which phase of the negotiation they are situated.
+Both the drone and client use finite state machines to define in which phase of the contract negotiation they are situated.
 
 \begin{figure}[htp]
     \centering
     \includegraphics[width=\columnwidth]{Drone}
-    \caption{A finite state machine of the drone agent. The blue transitions and state only apply to CNET, the red transitions only to DynCNET and the green transitions to CNCP and DynCNET.}
+    \caption{A finite state machine of the drone agent. The blue transitions and state only apply to CNET, the red transitions only to DynCNET and the green transitions to CNCP and DynCNET.  \commentV{te klein in twocolumn?}}
     \label{fig:droneFSM}
 \end{figure}
 
-Figure~\ref{fig:droneFSM} shows the FSM for the drone agent in the three different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. A drone can enter this state from all other states and can never leave it again}. The drone starts in the \texttt{IDLE} state. In this state, it will move to the closest warehouse, where it will enter the \texttt{CHARGING} state and start charging. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. In CNET, a drone will enter the \texttt{PROPOSED\_BID} state once it has submitted a bid. It will reenter the \texttt{IDLE} state if the client declines. In CNCP and DynCNET, the drone stays in either \texttt{IDLE} or \texttt{CHARGING} and may continue bidding.
+Figure~\ref{fig:droneFSM} shows the FSM for the drone agent in the three different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. A drone can enter this state from all other states and can never leave it again}. The drone starts in the \texttt{IDLE} state. In this state, it will move to the closest warehouse, where it will enter the \texttt{CHARGING} state and start charging its battery. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. In CNET, a drone will enter the \texttt{PROPOSED\_BID} state once it has submitted a bid. It will reenter the \texttt{IDLE} state if the client declines. In CNCP and DynCNET, the drone stays in either \texttt{IDLE} or \texttt{CHARGING} and may continue bidding.
 
 If the client awards the task to the drone, the drone goes into the \texttt{PICKING\_UP} state. There it will start moving to the warehouse for which the estimated cost was the lowest. When it gets there, it will go to the \texttt{CHARGING\_FOR\_CONTRACT} state and start charging until either it is sufficiently charged or until it is time to leave due to the client's delivery deadline. In DynCNET, the drone may continue bidding in the \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} states. If it wins another contract, it will stay in or go to the \texttt{PICKING\_UP} state. When the drone leaves, it will pick up the package from the warehouse and enter the \texttt{DELIVERING} state. From then on, it will keep flying to the client until it has arrived, upon which it will deliver the package to the client and enter the \texttt{IDLE} state, thereby moving to the closest warehouse.
 
@@ -187,7 +187,7 @@ The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP nor DynCNET. 
 \begin{figure}[htp]
     \centering
     \includegraphics[width=\columnwidth]{Client}
-    \caption{A finite state machine of the client agent (the red transition only applies to DynCNET)}
+    \caption{A finite state machine of the client agent (the red transition only applies to DynCNET) \commentV{te klein in twocolumn?}}
     \label{fig:clientFSM}
 \end{figure}
 
@@ -210,7 +210,7 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
 \subsection{Comparison with existing MAS from literature}
 When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. All drones are considered to be eligible. As there is only one type of bid, the bid specification defined in CNET is implicit and left out of the task announcement. There is no separate expiration time for bidding: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. 
 
-In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. Although \cite{CNET} suggests that this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect. In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
+In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. Although \cite{CNET} suggests that not allowing this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect. In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
 
 The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking.
 
@@ -218,13 +218,15 @@ The extension where drones that do not bid can respond with their reason is also
 
 A client waits one tick for bids to arrive. All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder, i.e. the drone with lowest cost. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
-In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?}  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds and therefore the total message count is reduced.
+In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary.
+
+The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.  \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?}  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds and the total message count is reduced.
 
 Once a drone has received a task, it starts executing the task by flying to the warehouse with the lowest estimated cost (that was calculated when bidding). It picks up the package at the warehouse and can possibly charge its battery there to make sure that it can complete the delivery, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
 In case the drone would crash, the notification of this failure to the client is modeled by sending one last signal to the client. In practice, outside a simulator, a polling approach might be used. After the client is aware of the failure, the client announces the task again.
 
-A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest, e.g. by broadcasting task announcement only within a limited range. In our design, the agents are limited only by their battery, but not in a communications range. We did not take any special action to prevent the oscillation of tasks between drones.
+A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest, e.g. by broadcasting task announcement only within a limited range. In our design, the agents are limited only by their battery, but not with a communications range. We did not take any special action to prevent the oscillation of tasks between drones.
 \outline{
     \begin{itemize}
         \item warehouses oneindige capaciteit
@@ -234,8 +236,6 @@ A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNE
         \item Feit dat ze enkel kunnen opladen als ze IDLE (CHARGING) zijn of in CHARGING\_FOR\_WAREHOUSE? En dus niet in andere warehouses. En ook niet voor ze naar andere warehouse vertrekken.
     \end{itemize}
     }
-    \commentV{hier zetten? \proposalY{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design }}
-
 
 \section{Experiments}
 \subsection{Setup}
