Reformulated other extensions a bit

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -120,22 +120,18 @@ DynCNET changes the acceptance of task by a winning contractor to a provisional 
 
 The synchronization between managers and contractor to assess their current state requires some additional messaging. If a manager cancels a contract, it needs to notify the original contractor that the task has been awarded to another agent. Inversely, a contractor that takes up another task needs to notify the manager of the original task that it is no longer committed to executing that original task. Finally the contractor needs to send a message to the manager when it starts executing the task, so the manager can stop announcing the task to other agents.
 
-\subsection{Alternative Contract Net Protocols}
+\subsection{Alternative Contract Net Extensions}
 \taskV{nalezen}
-\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving}
-\commentV{misschien bij theory gedeelte?\commentY{Wat bij theorie gedeelte?}}
 
-\taskS{Nu altijd geschreven als client-drone, aanpassen naar initiator-participant, om te matchen met theorie sectie + eventueel eens kijken dat zelfde termen gebruikt worden}
+In the literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a 2-phase protocol (PreBidding and DefinitiveBidding). The first round of pre-bidding is only tentative. The initiator informs the participants of the tentative results. Participants can still change their offers based on these tentative results and how the world (and other bidding processes) evolves. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator. If this bid is still better than all tentative bids from other participants, the participant will be informed and both agents commit to the contract. All other participants will be informed that the bidding is definitely over. If the definitive bid is not the best bid, the participant gets tentatively or definitely declined. In case of the former, it can submit a new tentative bid. This protocol can be seen as an extension on CNCP. Participants who get accepted, can still accept or decline by choosing the appropriate definitive bid. The advantage of this protocol over CNCP is that participants who get rejected can still improve their bid.
 
-In the literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a 2-phase protocol (PreBidding and DefinitiveBidding). The first round of pre-bidding is only tentative. The client informs the drones of the tentative results. Drones can still change their offers based on this tentative results and how the world (and other bidding processes) evolve. Once a drone has been tentatively accepted, it can send a definitive bid to the client. If this bid is still better than all tentative bids from other drones, the drone will be informed and both agents commit to the contract. All other drones will be informed that the bidding is definitely over. If the definitive bid is not the best bid, the drone gets tentatively or definitely declined. In case of the former, it can submit a new tentative bid. This protocol can be seen as an extension on CNCP. Drones who get accepted, can accept or decline by choosing the appropriate definitive bid. The advantage of this protocol is that drones who get rejected can still improve their bid.
+\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When a initiator receives bids, it can choose to accept one, or choose to iterate the process by issuing an adapted the call for proposal to (a subset of) the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
 
-\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When a client receives bids, it can choose to accept one, or choose to iterate the process by issuing an adapted the call for proposal to a subset of the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a drone is awarded the contract, the client stops issuing calls for proposals (because all bids are unsatisfactory) or all drones stop bidding.
-
-The tentative bidding of \cite{TentativeBidding} and ICN are very similar. Both protocols can be mapped onto each other.\commentY{Dat erin laten van het mappen op elkaar? Ik denk dat dat het geval is, als ik diagrammen vergelijk, maar niet 100\% zeker} One of the main differences is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  In our setting however, both protocols do not make much sense. Drones bid using the estimated profit. They cannot increase their bid, unless the estimated profit changes.
+One of the main differences between \cite{TentativeBidding} and ICN, is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  \commentY{Oude tekst, mag dus weg, vermoed ik?\proposalY{In our setting however, both protocols do not make much sense. Participants bid using the estimated profit. They cannot increase their bid, unless the estimated profit changes.}}
 
 \cite{LeveledCommitment} uses game theory to proof that leveled commitment is to be preferred in all situations over full commitment. In the negotiation of a contract, a decommitting penalty is agreed upon. (This penalty might be different for both agents). When an agent wants to cancel the contract, he has to pay his decommitting fee to the other agent. This not only gives a way to calculate whether or not to cancel a contract in favor of another contract\footnote{They prove (again using game theory) that it is harder than just checking if the profit of the new contract is higher than the fee, because the other agent might decommit if this agent doesn't decommit.}. It also allows contracts that were not possible using full commitment: it is possible that the benefit from a contract is lower than the expected benefit from other contracts that have not yet been announced. But by having the right decommitting fees, a leveled commitment contract might still be interesting for both parties.
 
-It is important to note, that in our design, bids are satisfactory if the expected profit is above the fine for not delivering to this client. (It does not take into account that new clients or drones might become available). The agents described in \cite{LeveledCommitment} take the expected profit of new clients or busy drones into account.
+\commentY{Opnieuw weg? \proposalY{It is important to note, that in our design, bids are satisfactory if the expected profit is above the fine for not delivering to this initiator. (It does not take into account that new initiators or participants might become available). The agents described in \cite{LeveledCommitment} take the expected profit of new initiators or busy participants into account.}}
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
