--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -143,6 +143,7 @@ Across the world several warehouses are located. For simplification, these wareh
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
 A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards.
+\commentY{iets zeggen over "uniformly" random?}
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents. 
 
@@ -150,19 +151,23 @@ The failures of drones are based on a Poisson distribution and are used in calcu
 
 
 
-\commentY{Warehouses randomly algorithm beschrijven}
+\taskS{Warehouses randomly algorithm beschrijven
+\proposalY{
+To divide the warehouses over the whole area, the number of warehouse is split in powers of two\footnote{5 = 4 + 1}. For every power of two, the area is divided in the same number of equiareal rectangles, each containing a warehouse at a uniformly random position.
+}}
 
 \outline{\begin{itemize}
-        \item drones leveren orders uit warehouses aan clients (1 order per client)
-        \item bid berekening (statistisch relevant)
-        \item messaging gedetailleerd bespreken of niet?
-        \item tijd tijdens opladen wordt niet meegerekend bij estimated cost (footnote)
+        \item drones leveren orders uit warehouses aan clients (1 order per client)\commentY{OK}
+        \item bid berekening (statistisch relevant)\commentY{OK}
+        \item messaging gedetailleerd bespreken of niet?\commentY{OK}
+        \item tijd tijdens opladen wordt niet meegerekend bij estimated cost (footnote)\commentY{Nog niet maar OK voor mij}
     \end{itemize}}
 
 \commentY{Add sequence diagrams of 3 protocols??? \commentV{als er nog plaats is in het verslag...}}
 
 \commentV{Agent architecture: zie section 2.3 https://lirias.kuleuven.be/bitstream/123456789/156687/1/CW478.pdf\commentY{Dat is toch veel complexer dan hoe onze architectuur eruit ziet?}}
 \subsubsection{Agent state machines}
+\commentY{Moet dit er eigenlijk nog in?}
 Both the drone and client use finite state machines to define in which phase of the negotiation they are situated.
 
 \begin{figure}[htp]
@@ -178,8 +183,6 @@ If the client awards the task to the drone, the drone goes into the \texttt{PICK
 
 The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP nor DynCNET.  DynCNET also has two extra transitions: from \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} back to \texttt{IDLE}, in case the client cancels the contract. CNCP and DynCNET also have a direct \texttt{gotContract} transition from \texttt{IDLE} and \texttt{CHARGING\_FOR\_CONTRACT} to \texttt{PICKING\_UP}. In CNET the drone first has to pass through the \texttt{PROPOSED\_BID} state.
 
-\commentY{Ook "biedingen" beter op FSM weergeven? Of dat laten voor sequence diagram\commentY{Ik denk dat sequence diagrammen niet nodig zijn, tenzij we ze in theorie sectie zouden willen zetten.}}
-
 \begin{figure}[htp]
     \centering
     \includegraphics[width=\columnwidth]{Client}
@@ -193,15 +196,9 @@ In CNET and CNCP, a client can only send task announcements while in the \texttt
 
 \commentY{Table met communication primitives as in \cite{TentativeBidding}? \commentV{als er nog plaats is in het verslag...}}
 
-    
-\proposalY{
-\commentY{Message loss?}
-
-\commentY{Synchronization van DynCNET: }
-\commentV{This latter then sends a message to confirm the abort.
-moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronization of abort messages}
-}
-
+\commentY{Message loss? houden we geen rekening mee\commentY{Maar staat bij design dus geen nood om nog eens te benadrukken, denk ik?}}
+\commentY{Synchronization van DynCNET: \commentV{(van de wiki) This latter then sends a message to confirm the abort.
+moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronization of abort messages}}
 
 \subsection{Comparison with existing MAS from literature}
 When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. All drones are considered to be eligible. As there is only one type of bid, the bid specification defined in CNET is implicit and left out of the task announcement. There is no separate expiration time for bidding: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. 
@@ -214,7 +211,8 @@ The extension where drones that do not bid can respond with their reason is also
 
 A client waits one tick for bids to arrive. All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder, i.e. the drone with lowest cost. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
-In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?}  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds and therefore the total message count is reduced.
+In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. In original CNCP as proposed by \cite{CNCP} the initiator first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the participant, the \texttt{AcceptProposal} is sent. These two messages from the initiator to the participant are merged together in our design. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds is increased in comparison with the original CNCP protocol.
+\commentY{Hierboven nog wat veel aangepast}
 
 Once a drone has received a task, it starts executing the task by flying to the warehouse with the lowest estimated cost (that was calculated when bidding). It picks up the package at the warehouse and can possibly charge its battery there to make sure that it can complete the delivery, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
@@ -222,6 +220,7 @@ In case the drone would crash, the notification of this failure to the client is
 
 A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest, e.g. by broadcasting task announcement only within a limited range. In our design, the agents are limited only by their battery, but not in a communications range. We did not take any special action to prevent the oscillation of tasks between drones.
 \outline{
+\commentY{Volgens mij klopt outline niet meer en is deze sectie in orde?}
     \begin{itemize}
         \item warehouses oneindige capaciteit
         \item tasks uit literature zijn orders bij ons
@@ -230,7 +229,6 @@ A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNE
         \item Feit dat ze enkel kunnen opladen als ze IDLE (CHARGING) zijn of in CHARGING\_FOR\_WAREHOUSE? En dus niet in andere warehouses. En ook niet voor ze naar andere warehouse vertrekken.
     \end{itemize}
     }
-    \commentV{hier zetten? \proposalY{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design }}
 
 
 \section{Experiments}
